{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 59,
  "lineage": "ec360574-1c90-cd69-a419-1d08a4f61b59",
  "resources": [
    {
      "module": "module.ec2_with_alb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08e5dcf7e45dea85e",
            "arn": "arn:aws:ec2:eu-north-1:590183837670:instance/i-066fa67e591725f3b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-runtime-profile",
            "id": "i-066fa67e591725f3b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "test-16-01-26",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-094039fb26246f4e7"
              }
            ],
            "primary_network_interface_id": "eni-094039fb26246f4e7",
            "private_dns": "ip-10-0-0-46.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.46",
            "public_ip": "16.16.65.82",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "environment": "prod",
                  "managed_by": "terraform",
                  "owner": "allexf",
                  "project": "myapp"
                },
                "tags_all": {
                  "environment": "prod",
                  "managed_by": "terraform",
                  "owner": "allexf",
                  "project": "myapp"
                },
                "throughput": 125,
                "volume_id": "vol-0d9a73c8735591334",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e80eafb7183dc997",
            "tags": {
              "Name": "test-app-prod",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "tags_all": {
              "Name": "test-app-prod",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03d2ebbc0e48c7150"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183837670",
            "id": "i-066fa67e591725f3b",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.ec2_with_alb.aws_iam_instance_profile.ec2_runtime_profile",
            "module.ec2_with_alb.aws_iam_role.ec2_runtime",
            "module.ec2_with_alb.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_with_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-logs-bucket-exeish3i",
                "enabled": true,
                "prefix": "alb"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:loadbalancer/app/test-app-prod/4feec92ca4059c83",
            "arn_suffix": "app/test-app-prod/4feec92ca4059c83",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "test-app-prod-2106904593.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:loadbalancer/app/test-app-prod/4feec92ca4059c83",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-app-prod",
            "preserve_host_header": false,
            "region": "eu-north-1",
            "security_groups": [
              "sg-03263c6b29d80b097"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05e34cb6d6522f974"
              },
              {
                "subnet_id": "subnet-0e80eafb7183dc997"
              }
            ],
            "subnets": [
              "subnet-05e34cb6d6522f974",
              "subnet-0e80eafb7183dc997"
            ],
            "tags": {
              "Name": "test-app-prod",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "tags_all": {
              "Name": "test-app-prod",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "vpc_id": "vpc-06b2ad1620ce77b78",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:loadbalancer/app/test-app-prod/4feec92ca4059c83"
          },
          "dependencies": [
            "module.ec2_with_alb.aws_s3_bucket.alb_logs",
            "module.ec2_with_alb.aws_s3_bucket_policy.alb_logs",
            "module.ec2_with_alb.aws_security_group.alb",
            "module.ec2_with_alb.data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_with_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:listener/app/test-app-prod/4feec92ca4059c83/478a2b53c77922fa",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:targetgroup/test-app-prod-tg/1ef6532c79278a12",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:listener/app/test-app-prod/4feec92ca4059c83/478a2b53c77922fa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:loadbalancer/app/test-app-prod/4feec92ca4059c83",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-north-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:listener/app/test-app-prod/4feec92ca4059c83/478a2b53c77922fa"
          },
          "dependencies": [
            "module.ec2_with_alb.aws_lb.this",
            "module.ec2_with_alb.aws_lb_target_group.this",
            "module.ec2_with_alb.aws_s3_bucket.alb_logs",
            "module.ec2_with_alb.aws_s3_bucket_policy.alb_logs",
            "module.ec2_with_alb.aws_security_group.alb",
            "module.ec2_with_alb.data.aws_caller_identity.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_with_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:targetgroup/test-app-prod-tg/1ef6532c79278a12",
            "arn_suffix": "targetgroup/test-app-prod-tg/1ef6532c79278a12",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/healthz",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:targetgroup/test-app-prod-tg/1ef6532c79278a12",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-north-1:590183837670:loadbalancer/app/test-app-prod/4feec92ca4059c83"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "test-app-prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-north-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06b2ad1620ce77b78"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:targetgroup/test-app-prod-tg/1ef6532c79278a12"
          }
        }
      ]
    },
    {
      "module": "module.ec2_with_alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:targetgroup/test-app-prod-tg/1ef6532c79278a12-20260118102459889800000002",
            "port": 80,
            "region": "eu-north-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:590183837670:targetgroup/test-app-prod-tg/1ef6532c79278a12",
            "target_id": "i-066fa67e591725f3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_with_alb.aws_iam_instance_profile.ec2_runtime_profile",
            "module.ec2_with_alb.aws_iam_role.ec2_runtime",
            "module.ec2_with_alb.aws_instance.this",
            "module.ec2_with_alb.aws_lb_target_group.this",
            "module.ec2_with_alb.aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_with_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183837670:security-group/sg-03263c6b29d80b097",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03263c6b29d80b097",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-app-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "590183837670",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-app-prod-alb-sg",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "tags_all": {
              "Name": "test-app-prod-alb-sg",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b2ad1620ce77b78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183837670",
            "id": "sg-03263c6b29d80b097",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "module": "module.ec2_with_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:590183837670:security-group/sg-03d2ebbc0e48c7150",
            "description": "EC2 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d2ebbc0e48c7150",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from internal network",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "HTTP from internal network",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test-app-prod-ec2-sg",
            "name_prefix": "",
            "owner_id": "590183837670",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-app-prod-ec2-sg",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "tags_all": {
              "Name": "test-app-prod-ec2-sg",
              "environment": "prod",
              "managed_by": "terraform",
              "owner": "allexf",
              "project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b2ad1620ce77b78"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "590183837670",
            "id": "sg-03d2ebbc0e48c7150",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}